phase 4.9: revamp null handling